bugs resolved